# Code-play

./: .gitignore  README.md
C++/: UDLplay.cpp  copy_or_move.cpp  playAbstract.cpp  playInheritance.cpp  playInheritance2.cpp  playMapPointer.cpp  playpointer.cpp  playreference.cpp  polymorphism.cpp  testMapSpeed.cpp
C++/abstractMacro/: Makefile  macro.inc  test1  test1.cpp  test2  test2.cpp
C++/cpp-generics/: 1.cpp  2.cpp  3.cpp  Monad_Maybe.cpp  TypeName.hpp
Haskell/: forall-play.hs
LLVM/: CMakeLists.txt
LLVM/ASTVisitor/: ASTplayer.cpp
LLVM/TestFiles/: test1.cpp
Python/Pandas/: play_find.py  play_groupby.py  play_set_index.py
Software Foundations/: README.md
Software Foundations/LF/: Auto.v  Basics.v  IndPrinciples.v  IndProp.v  Induction.v  Lists.v  Logic.v  Poly.v  ProofObjects.v  Tactics.v  imp.v
Software Foundations/PLF/: Equiv.v  Imp.v  Maps.v
Type System/Church-Encoding/: README.md  church_encoding.hs
Type System/The-Little-Typer/: README.md
cmake/LLVMSupport/: CMakeLists.txt
